--- a/templates/post.html
+++ b/templates/post.html
@@ -12,6 +12,7 @@
 
         <!-- Bootstrap core CSS -->
         <link href="static/css/bootstrap.css" rel="stylesheet">
+        <link rel="shortcut icon" href="/static/img/ico2.png" type="image/png">
 
         <!-- Custom styles for this template -->
         <link href="static/css/soon.css" rel="stylesheet">
