--- a/static/css/soon.css
+++ b/static/css/soon.css
@@ -80,7 +80,7 @@ HEADER
 #slider{
     width: 100%;
     position: fixed;
-    background-color: #2c3e50; 
+    background-color: #2c3e50;
     top: 0;
     left: 0;
     z-index: 0;
@@ -549,6 +549,16 @@ PLUGINS
     background-position:center;
     margin:-100px 0 0 -100px; /* is width and height divided by two */
 }
+
+#line_block {
+        width:33%;
+        height:10%;
+        float:left;
+
+        text-align:center;
+        padding: 10px;
+        }
+
 /* SLIDER */
 .rev_slider_wrapper{ position:relative;}
 .rev_slider_wrapper >ul { visibility:hidden;}
