--- a/templates/index.html
+++ b/templates/index.html
@@ -49,21 +49,21 @@
                 {{ form.hidden_tag() }}
                 <p>
                 <h4 data-animated="GoIn">{{ form.vuz.label }}</h4>
-                    {{ form.vuz(class="form-control") }}<br>
+                    <h2><b>{{ form.vuz(class="form-control") }}</b></h2>
                     {% for error in form.nup.errors %}
                 <div class="alert alert-danger" role="alert">
                     {{ error }}
                 </div>
                 {% endfor %}
                 <h4 data-animated="GoIn">{{ form.nup.label }}</h4>
-                    {{ form.nup(class="form-control") }}<br>
+                <h2><b>{{ form.nup(class="form-control") }}</b></h2>
                     {% for error in form.nup.errors %}
                 <div class="alert alert-danger" role="alert">
                     {{ error }}
                 </div>
                 {% endfor %}
                 <h4 data-animated="GoIn">{{ form.snils.label }}</h4>
-                    {{ form.snils(class="form-control") }}<br>
+                <h2><b>{{ form.snils(class="form-control") }}</b></h2>
                     {% for error in form.snils.errors %}
                 <div class="alert alert-danger" role="alert">
                     {{ error }}
