--- a/templates/index.html
+++ b/templates/index.html
@@ -47,30 +47,30 @@
             <h4 data-animated="GoIn">ВСЕ ПРОСТО</h4><br>
             <form data-animated="GoIn" action="" method="post">
                 {{ form.hidden_tag() }}
-                <p>
+
                 <h4 data-animated="GoIn">{{ form.vuz.label }}</h4>
-                    <h2><b>{{ form.vuz(class="form-control") }}</b></h2>
+                    <b>{{ form.vuz(class="form-control") }}</b>
                     {% for error in form.nup.errors %}
                 <div class="alert alert-danger" role="alert">
                     {{ error }}
                 </div>
                 {% endfor %}
                 <h4 data-animated="GoIn">{{ form.nup.label }}</h4>
-                <h2><b>{{ form.nup(class="form-control") }}</b></h2>
+                <b>{{ form.nup(class="form-control") }}</b>
                     {% for error in form.nup.errors %}
                 <div class="alert alert-danger" role="alert">
                     {{ error }}
                 </div>
                 {% endfor %}
                 <h4 data-animated="GoIn">{{ form.snils.label }}</h4>
-                <h2><b>{{ form.snils(class="form-control") }}</b></h2>
+                <b>{{ form.snils(class="form-control") }}</b>
                     {% for error in form.snils.errors %}
                 <div class="alert alert-danger" role="alert">
                     {{ error }}
                 </div>
                 {% endfor %}
-                </p>
-                <p><h4 data-animated="GoIn">{{ form.submit(type="submit", class="btn btn-success") }}</h4></p>
+
+                <br><p><h4 data-animated="GoIn">{{ form.submit(type="submit", class="btn btn-success") }}</h4></p>
                 <div>{{ message }}</div></form>
 
         </div>
